<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="open_app">Opens the</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
