<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/spotify_streamer"
        android:onClick="displayToast" />

    <Button
        android:id="@+id/btn_super_duo1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/super_duo1"
        android:onClick="displayToast" />

    <Button
        android:id="@+id/btn_super_duo2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/super_duo2"
        android:onClick="displayToast" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/build_it_bigger"
        android:onClick="displayToast" />

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/xyz_reader"
        android:onClick="displayToast" />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/accent"
        android:text="@string/capstone"
        android:onClick="displayToast" />
</LinearLayout>